TAG: coordload-build36-2
DATE: 08/22/2006
STAFF: lec
CHANGES: 
1) build 36

TAG: coordload-build36-1
DATE: 08/16/2006
STAFF: lec
CHANGES: 
1) build 36

TAG: coordload-build36-BP
DATE: 08/16/2006
STAFF: lec
CHANGES: 
1) branch point tag for build 36

TAG: coordload-3-5-0-2
DATE: 05-05-2006
STAFF: lec
RELEASE: MGI3.5
CHANGES: 
1) bug fix removed prepending of `pwd` on config file parameters in coordload.sh
2) sharon had commented this out...we decided to just remove it

TAG: coordload-3-5-0-1
DATE: 05-04-2006
STAFF: sc
RELEASE: MGI3.5
CHANGES: 
1) bug fix removed prepending of `pwd` on config file parameters in coordload.sh

TAG: coordload-1-0-5
TAG: coordload-1-0-4
DATE: 11-19-2004
STAFF: sc
RELEASE: dev
CHANGES: tr6336
1) coordload.config.default - new common config vars

TAG: coordload-1-0-3
DATE: 11-17-2004
STAFF: sc
RELEASE: dev
CHANGES: TR6047 dla refactoring
1) coordload.config.defaults - updated with new class package paths

TAG: coordload-1-0-2
DATE: 11-10-2004
STAFF: sc
RELEASE: dev
CHANGES:TR5395
1) changed DLA_LOAD_STREAM and COORD_INTERPRETER default values

TAG: coordload-1-0-1
DATE: 10-20-2004
STAFF: sc
RELEASE: dev
CHANGES:TR5395
1) removed ncbi values from coordload.config.default

TAG: coordload-1-0-0
DATE: 10-20-2004j
STAFF: sc
RELEASE: dev
CHANGES: TR5395 initial tag
