@@ -1,3 +1,9 @@
+TAG: coordload-build36-3
+DATE: 08/23/2006
+STAFF: lec
+CHANGES: 
+1) build 36
+
 TAG: coordload-build36-2
 DATE: 08/22/2006
 STAFF: lec
